<resources>
    <string name="app_name">Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="notes_fragment">Notes fragment</string>
    <string name="register_fragment">Register Fragment</string>
    <string name="login">Login</string>
    <string name="main">Main</string>
    <string name="register">Register</string>
    <string name="notes">Notes</string>
    <string name="next">Next</string>
    <string name="username">UserName</string>
    <string name="logout">LogOut</string>
    <string name="open_dialog">Open Dialog</string>
    <string name="are_you_18">Are you 18+?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="_2nd_activity">2nd Activity</string>
</resources>