<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainFragment"
        android:padding="20dp">

       <TextView
           android:id="@+id/mainTxt"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:gravity="center_horizontal"
           android:textSize="25sp"
           android:text="@string/main_fragment" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="top"
    android:layout_marginTop="40dp">
    <TextView
        android:id="@+id/username"
        android:layout_width="0dp"
        android:layout_marginStart="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:layout_weight="2"/>
    <Button
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/logout"/>
</LinearLayout>

        <Button
            android:id="@+id/notesBtn"
            android:layout_width="match_parent"
            android:text="@string/notes"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            />

    </FrameLayout>
</layout>